## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = foobar_cpp

foobar_cpp_SOURCES = \
	main.cc     \
	problem.h     \
	doMisAlgn.h     \
	doMisAlgn.cc     \
	readHTMLfile.cc     \
	problem.cc     \
	x01.cc     \
	interface.cc     \
	LinePlaneInter.cc     \
	Cgicpphelper.h     \
	interface.h     \
	staticConst.h     \
	feetcorrection.cc     \
	feetcorrection.h

foobar_cpp_LDADD = \
	/usr/lib/libCoin.so \
	/usr/lib/libplplotcxxd.so \
	/usr/lib/libplplotd.so \
	/usr/lib/libcsirocsa.so \
	/usr/lib/libGL.so

